[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Skills/root_new.png" type="Texture" id=1]
[ext_resource path="res://src/objects/RootSwing.gd" type="Script" id=2]
[ext_resource path="res://assets/Sound/131050__maxdemianagl__growing_plant.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/Sound/SFX_Wood_Hit_3.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 3.0

[node name="RootSwing" type="Area2D"]
collision_layer = 2
collision_mask = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="RootSprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 0, 6 )

[node name="RootCollisionShape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RootGrowMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="RootHitMusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="area_shape_entered" from="." to="." method="_on_RootSwing_area_shape_entered"]
[connection signal="body_entered" from="." to="." method="_on_RootSwing_body_entered"]
